# frame-extractor

./: .gitignore  README.md  extract.py  index.html  pyproject.toml
